[package]
name = "cosmic-hammer-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cosmic-hammer"
path = "src/main.rs"

[dependencies]
cosmic-hammer-core = { path = "../cosmic-hammer-core" }
cosmic-hammer-platform = { path = "../cosmic-hammer-platform" }
cosmic-hammer-pte = { path = "../cosmic-hammer-pte" }
cosmic-hammer-scanner = { path = "../cosmic-hammer-scanner" }
cosmic-hammer-report = { path = "../cosmic-hammer-report" }
cosmic-hammer-syscheck = { path = "../cosmic-hammer-syscheck" }
cosmic-hammer-plugin = { path = "../cosmic-hammer-plugin" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
ctrlc = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"
