[package]
name = "cosmic-hammer-platform"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cosmic-hammer-core = { path = "../cosmic-hammer-core" }
tracing = "0.1"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Memory", "Win32_System_SystemInformation", "Win32_System_Threading"] }
