[package]
name = "cosmic-hammer-report"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cosmic-hammer-core = { path = "../cosmic-hammer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
