[package]
name = "cosmic-hammer-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
cosmic-hammer-core = { path = "../cosmic-hammer-core" }
ratatui = "0.29"
crossterm = "0.28"
tracing = "0.1"
rodio = { version = "0.20", optional = true }

[features]
default = []
flip-sound = ["dep:rodio"]
